test/cli/test-deleting-policy/deleting-pod-by-name/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resource.yaml
results:
- isDeletingPolicy: true
  kind: Pod
  policy: deleting-pod-by-name
  resources:
  - test/test-nginx-2
  result: fail
- isDeletingPolicy: true
  kind: Pod
  policy: deleting-pod-by-name
  resources:
  - test/test-nginx-1
  result: pass
